# datashield-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  stale.yml
datashield/: __init__.py  api.py  interface.py  utils.py
tests/: test_config.py  test_logins.py  test_session_filters.py  test_utils.py
