[project]
name = "datashield"
version = "0.2.0"
description = "DataSHIELD Client Interface in Python."
authors = [{name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}]
maintainers = [{name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}]
license = {text = "LGPL"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://www.datashield.org"
Repository = "https://github.com/datashield/datashield-python"
Documentation = "https://datashield.github.io/datashield-python"
"Bug Tracker" = "https://github.com/datashield/datashield-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
