[project]
name = "datashield"
version = "0.4.0"
description = "DataSHIELD Client Interface in Python."
authors = [
    {name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}
]
maintainers = [
    {name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}
]
license = {text = "LGPL"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["datashield", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
]
dev = [
    "ruff>=0.10.0",
]

[project.urls]
Homepage = "https://www.datashield.org"
Repository = "https://github.com/datashield/datashield-python"
Documentation = "https://datashield.github.io/datashield-python"
"Bug Tracker" = "https://github.com/datashield/datashield-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datashield"]
